force-app/main/default/objects/Opportunity__c/Opportunity__c.object-meta.xml
<CustomObject>
    <label>Opportunity</label>
    <nameField>
        <displayFormat>OPP-{00000}</displayFormat>
        <label>Opportunity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>