force-app/main/default/objects/Opportunity__c/fields/Account_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>Account_BillingCountry__c</fullName>
    <description>ss060320:  Changed to pull from account.billing.country.  Was pulling Destination_Location__r.addrline5__c</description>
    <formula>Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account BillingCountry</label>
    <type>Text</type>
</CustomField>