force-app/main/default/objects/Opportunity__c/fields/Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Formula__c</fullName>
    <formula>IF(ISBLANK(Account__c),
HYPERLINK(&apos;https://hoogwegt--ismdev--c.visualforce.com/apex/ChildAccountLookupPage?id=&apos; &amp; Id ,&apos;SELECT Account&apos;,&apos;_self&apos;),

HYPERLINK(&apos;/lightning/r/Account/&apos; &amp; Account__r.Id &amp; &apos;/view&apos;,Account__r.Name,&apos;_self&apos;)
&amp;&quot; &quot;&amp;
HYPERLINK(&apos;https://hoogwegt--ismdev--c.visualforce.com/apex/ChildAccountLookupPage?id=&apos; &amp; Id ,&apos;(change)&apos;,&apos;_self&apos;)
)


/*
IF(ISBLANK( Account__c ) , HYPERLINK(&apos;https://hoogwegt--ismdev--c.visualforce.com/apex/ChildAccountLookupPage?id=&apos; &amp; Id , &apos;SELECT Account&apos;,&apos;_self&apos;),
HYPERLINK(&apos;https://hoogwegt--ismdev--c.visualforce.com/apex/ChildAccountLookupPage?id=&apos; &amp; Id , Account__r.Name,&apos;_self&apos;))
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>