force-app/main/default/objects/Opportunity__c/fields/Agent_commission_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Agent_commission_Fixed__c</fullName>
    <label>Agent commission ($ Fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>