force-app/main/default/objects/Opportunity__c/fields/Agent_commission_per_lb_MT__c.field-meta.xml
<CustomField>
    <fullName>Agent_commission_per_lb_MT__c</fullName>
    <label>Agent commission ($ per lb/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>