force-app/main/default/objects/Opportunity__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Faheem</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>