force-app/main/default/objects/Opportunity__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <label>Assumptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>