force-app/main/default/objects/Opportunity__c/fields/Avg_Days_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_to_Pay__c</fullName>
    <formula>Account__r.Avg_Days_to_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Days to Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>