force-app/main/default/objects/Opportunity__c/fields/AvgDaysPastDue__c.field-meta.xml
<CustomField>
    <fullName>AvgDaysPastDue__c</fullName>
    <formula>MAX(Account__r.Avg_Days_to_Pay__c,Account__r.AR_Terms__c,Account__r.accmterms_days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Charge Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>