force-app/main/default/objects/Opportunity__c/fields/Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate__c</fullName>
    <label>Buy Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>