force-app/main/default/objects/Opportunity__c/fields/Cargo_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Insurance__c</fullName>
    <label>Cargo Insurance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>