force-app/main/default/objects/Opportunity__c/fields/Competitor_s_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s_Price__c</fullName>
    <label>Competitor’s Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>