force-app/main/default/objects/Opportunity__c/fields/Contract_Writer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>