force-app/main/default/objects/Opportunity__c/fields/Credit_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance__c</fullName>
    <label>Credit Insurance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>