force-app/main/default/objects/Opportunity__c/fields/Cross_doc_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Cross_doc_Fixed__c</fullName>
    <label>Cross doc.($ Fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>