force-app/main/default/objects/Opportunity__c/fields/Cross_doc_per_lb_MT__c.field-meta.xml
<CustomField>
    <fullName>Cross_doc_per_lb_MT__c</fullName>
    <label>Cross doc.($ per lb/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>