force-app/main/default/objects/Opportunity__c/fields/Cross_Dock_Warehouse_Cont__c.field-meta.xml
<CustomField>
    <fullName>Cross_Dock_Warehouse_Cont__c</fullName>
    <label>Cross Dock / Warehouse ($/Cont)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>