force-app/main/default/objects/Opportunity__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Location</label>
    <referenceTo>Credit_Insurance_Rate__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>