force-app/main/default/objects/Opportunity__c/fields/Cwt_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Cwt_Fixed__c</fullName>
    <label>Cwt. ($ Fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>