force-app/main/default/objects/Opportunity__c/fields/Cwt_per_lb_MT__c.field-meta.xml
<CustomField>
    <fullName>Cwt_per_lb_MT__c</fullName>
    <label>Cwt. ($ per lb/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>