force-app/main/default/objects/Opportunity__c/fields/CWT_Rebate__c.field-meta.xml
<CustomField>
    <fullName>CWT_Rebate__c</fullName>
    <label>CWT Rebate %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>