force-app/main/default/objects/Opportunity__c/fields/CWT_Rebate_MT__c.field-meta.xml
<CustomField>
    <fullName>CWT_Rebate_MT__c</fullName>
    <label>CWT Rebate ($/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>