force-app/main/default/objects/Opportunity__c/fields/Date_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Quoted__c</fullName>
    <label>Date Quoted</label>
    <type>DateTime</type>
</CustomField>