force-app/main/default/objects/Opportunity__c/fields/Date_SO_Written__c.field-meta.xml
<CustomField>
    <fullName>Date_SO_Written__c</fullName>
    <label>Date SO Written</label>
    <type>Date</type>
</CustomField>