force-app/main/default/objects/Opportunity__c/fields/Delivered_Eval_UM__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Eval_UM__c</fullName>
    <label>Delivered Eval / UM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>