force-app/main/default/objects/Opportunity__c/fields/Delivered_Price_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Price_Calculated__c</fullName>
    <label>Delivered Offer / UM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>