force-app/main/default/objects/Opportunity__c/fields/Destination_2__c.field-meta.xml
<CustomField>
    <fullName>Destination_2__c</fullName>
    <label>Destination 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>