force-app/main/default/objects/Opportunity__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <formula>IF(ISBLANK(Destination_Location__c),

HYPERLINK(&apos;https://hoogwegt--ismdev--c.visualforce.com/apex/Destination?id=&apos; &amp; Id,&apos;SELECT Location&apos;,&apos;_self&apos;),

HYPERLINK(&apos;/lightning/r/Location__c/&apos; &amp; Destination_Location__r.Id &amp; &apos;/view&apos;,Destination_Location__r.LookupValue__c,&apos;_self&apos;)
&amp;&quot; &quot;&amp;
HYPERLINK(&apos;https://hoogwegt--ismdev--c.visualforce.com/apex/Destination?id=&apos; &amp; Id,&apos;(change)&apos;,&apos;_self&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination</label>
    <type>Text</type>
</CustomField>