force-app/main/default/objects/Opportunity__c/fields/Destination_CopyPast__c.field-meta.xml
<CustomField>
    <fullName>Destination_CopyPast__c</fullName>
    <formula>Destination_Location__r.Oppdest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination_CopyPast</label>
    <type>Text</type>
</CustomField>