force-app/main/default/objects/Opportunity__c/fields/Destination_Filter__c.field-meta.xml
<CustomField>
    <fullName>Destination_Filter__c</fullName>
    <label>Destination Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>