force-app/main/default/objects/Opportunity__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Opportunities (Destination)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>