force-app/main/default/objects/Opportunity__c/fields/Docs_fixed__c.field-meta.xml
<CustomField>
    <fullName>Docs_fixed__c</fullName>
    <label>Docs ($ fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>