force-app/main/default/objects/Opportunity__c/fields/Dollar_Contract__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Contract__c</fullName>
    <label>Dollar Contract</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>