force-app/main/default/objects/Opportunity__c/fields/Drayage_Domestic_Inland_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Drayage_Domestic_Inland_Fixed__c</fullName>
    <label>Drayage / Domestic Inland ($ Fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>