force-app/main/default/objects/Opportunity__c/fields/FG_Rate_Update__c.field-meta.xml
<CustomField>
    <fullName>FG_Rate_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FG Rate Update</label>
    <type>Checkbox</type>
</CustomField>