force-app/main/default/objects/Opportunity__c/fields/Finance_Costs__c.field-meta.xml
<CustomField>
    <fullName>Finance_Costs__c</fullName>
    <label>Finance Costs</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>