force-app/main/default/objects/Opportunity__c/fields/FireNullProcess__c.field-meta.xml
<CustomField>
    <fullName>FireNullProcess__c</fullName>
    <formula>Account__r.Parent_Account__c = Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FireNullProcess</label>
    <type>Checkbox</type>
</CustomField>