force-app/main/default/objects/Opportunity__c/fields/FOB_Offer_LB__c.field-meta.xml
<CustomField>
    <fullName>FOB_Offer_LB__c</fullName>
    <label>FOB Offer / LB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>