force-app/main/default/objects/Opportunity__c/fields/FOB_Price__c.field-meta.xml
<CustomField>
    <fullName>FOB_Price__c</fullName>
    <label>FOB Evaluation / LB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>