force-app/main/default/objects/Opportunity__c/fields/In_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Process_Date__c</fullName>
    <label>In Process Date</label>
    <type>DateTime</type>
</CustomField>