force-app/main/default/objects/Opportunity__c/fields/Inco_Terms__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms__c</fullName>
    <label>Inco Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3RD</fullName>
                <label>3rd</label>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DPU</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>FRC</fullName>
            </value>
            <value>
                <fullName>PFD</fullName>
            </value>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>T/T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>