force-app/main/default/objects/Opportunity__c/fields/Inco_Terms_previously_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms_previously_Shipment__c</fullName>
    <label>Inco Terms (previously Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DAT</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>3rd CPU</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
            </value>
            <value>
                <fullName>FRC</fullName>
            </value>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>T/T</fullName>
            </value>
            <value>
                <fullName>PFD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>