force-app/main/default/objects/Opportunity__c/fields/Index_Price__c.field-meta.xml
<CustomField>
    <fullName>Index_Price__c</fullName>
    <label>Variable Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>