force-app/main/default/objects/Opportunity__c/fields/IndexPrice__c.field-meta.xml
<CustomField>
    <fullName>IndexPrice__c</fullName>
    <label>Variable Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>