force-app/main/default/objects/Opportunity__c/fields/Item_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Item_Characteristics__c</fullName>
    <label>Item Characteristics</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>