force-app/main/default/objects/Opportunity__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AMF 99.9% Butterfat</fullName>
            </value>
            <value>
                <fullName>Soft Butteroil Substitute</fullName>
            </value>
            <value>
                <fullName>Standard Butteroil Substitute</fullName>
            </value>
            <value>
                <fullName>Concentrated Milk Fat</fullName>
            </value>
            <value>
                <fullName>Salted Butter-80% Fat</fullName>
            </value>
            <value>
                <fullName>UNSALTED 80 LACTIC BUTTER</fullName>
            </value>
            <value>
                <fullName>Unsalted Butter-80% Fat</fullName>
            </value>
            <value>
                <fullName>Buttermilk</fullName>
            </value>
            <value>
                <fullName>Buttermilk Ex Gr Swt Crm (&gt;30% Prtn)</fullName>
            </value>
            <value>
                <fullName>Caseinate, Calcium</fullName>
            </value>
            <value>
                <fullName>Caseinate, Sodium</fullName>
            </value>
            <value>
                <fullName>Rennet Casein</fullName>
            </value>
            <value>
                <fullName>ASIAGO</fullName>
            </value>
            <value>
                <fullName>BLUE CHEESE CRUMBLES</fullName>
            </value>
            <value>
                <fullName>BRIE (MISC)</fullName>
            </value>
            <value>
                <fullName>COLBY</fullName>
            </value>
            <value>
                <fullName>COLBY JACK</fullName>
            </value>
            <value>
                <fullName>COLORED CHEDDAR</fullName>
            </value>
            <value>
                <fullName>CREAM CHEESE</fullName>
            </value>
            <value>
                <fullName>EDAM CHEESE</fullName>
            </value>
            <value>
                <fullName>FETA</fullName>
            </value>
            <value>
                <fullName>FONTINA</fullName>
            </value>
            <value>
                <fullName>GOUDA</fullName>
            </value>
            <value>
                <fullName>HAVARTI</fullName>
            </value>
            <value>
                <fullName>MONTEREY JACK</fullName>
            </value>
            <value>
                <fullName>MOZZARELLA</fullName>
            </value>
            <value>
                <fullName>MUENSTER</fullName>
            </value>
            <value>
                <fullName>PARMESAN</fullName>
            </value>
            <value>
                <fullName>PEPPER JACK</fullName>
            </value>
            <value>
                <fullName>PIZZA CHEESE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>