force-app/main/default/objects/Opportunity__c/fields/Item_Description_Other__c.field-meta.xml
<CustomField>
    <fullName>Item_Description_Other__c</fullName>
    <label>Item Description Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>