force-app/main/default/objects/Opportunity__c/fields/Item_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Item_Vendor__c</fullName>
    <label>Item Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>