force-app/main/default/objects/Opportunity__c/fields/ItemName__c.field-meta.xml
<CustomField>
    <fullName>ItemName__c</fullName>
    <formula>Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ItemName</label>
    <type>Text</type>
</CustomField>