force-app/main/default/objects/Opportunity__c/fields/L_C_Bank_Fee_per_lb_MT__c.field-meta.xml
<CustomField>
    <fullName>L_C_Bank_Fee_per_lb_MT__c</fullName>
    <label>L/C Bank Fee ($ per lb/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>