force-app/main/default/objects/Opportunity__c/fields/L_C_or_Bank_fees_Cont__c.field-meta.xml
<CustomField>
    <fullName>L_C_or_Bank_fees_Cont__c</fullName>
    <label>L/C or Bank fees ($/Cont)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>