force-app/main/default/objects/Opportunity__c/fields/Labels_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Labels_Fixed__c</fullName>
    <label>Labels ($ Fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>