force-app/main/default/objects/Opportunity__c/fields/Misc_Costs_Total__c.field-meta.xml
<CustomField>
    <fullName>Misc_Costs_Total__c</fullName>
    <label>Misc. Costs: Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>