force-app/main/default/objects/Opportunity__c/fields/My_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>My_Opportunities__c</fullName>
    <description>This formula field is used for dynamic reporting, so any Trader can view a single (configured) report and the data will only return results where they are named in the Trader field.</description>
    <formula>IF(
$User.Id = Trader__r.Id
,true,false)</formula>
    <inlineHelpText>This formula field is used for dynamic reporting, so any Trader can view a single (configured) report and the data will only return results where they are named in the Trader field.</inlineHelpText>
    <label>My Opportunities</label>
    <type>Checkbox</type>
</CustomField>