force-app/main/default/objects/Opportunity__c/fields/Ocean_Freight_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_Fixed__c</fullName>
    <label>Ocean Freight ($ Fixed)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>