force-app/main/default/objects/Opportunity__c/fields/Ocean_Freight_per_lb_MT__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_per_lb_MT__c</fullName>
    <label>Ocean Freight ($ per lb / MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>