force-app/main/default/objects/Opportunity__c/fields/Origin_2__c.field-meta.xml
<CustomField>
    <fullName>Origin_2__c</fullName>
    <label>Origin 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>