force-app/main/default/objects/Opportunity__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <referenceTo>Origin__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>