force-app/main/default/objects/Opportunity__c/fields/Origin_formula__c.field-meta.xml
<CustomField>
    <fullName>Origin_formula__c</fullName>
    <formula>Origin__r.Copypaste_Data__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin_formula</label>
    <type>Text</type>
</CustomField>