force-app/main/default/objects/Opportunity__c/fields/Origin_Plant_WH__c.field-meta.xml
<CustomField>
    <fullName>Origin_Plant_WH__c</fullName>
    <label>Origin (Plant/WH)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visalia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>